Added .registration=TRUE to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,4 +15,4 @@ import(methods)
 importClassesFrom(rstan,stanfit)
 importFrom(loo,loo)
 importFrom(loo,waic)
-useDynLib(bDif)
+useDynLib(bDif ,.registration=TRUE)
