--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,9 +13,10 @@ Description: A Bayesian procedure for estimating the probability of differential
 		the makeup of the latent groups for which some items seem to operate differentially.
 License: GPL-3
 Imports: difR,
-					loo
-Depends: rstan,
-					R (>= 3.0.2),
-					Rcpp (>= 0.12.7)
+         loo,
+         rstan (>= 2.12.1)
+Depends: R (>= 3.0.2),
+         Rcpp (>= 0.12.7),
+         methods
 LinkingTo: StanHeaders (>= 2.12.0), rstan (>= 2.12.1), BH (>= 1.60.0.2), Rcpp (>= 0.12.7), RcppEigen (>= 0.3.2.9.0)
-RoxygenNote: 5.0.1
+
