Add Rcpp to imports.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,9 @@ exportClasses(bDif)
 exportMethods(clusters)
 exportMethods(coef)
 exportMethods(factor.scores)
+import(Rcpp)
 import(methods)
 importClassesFrom(rstan,stanfit)
 importFrom(loo,loo)
 importFrom(loo,waic)
-useDynLib(bDif ,.registration=TRUE)
+useDynLib(bDif, .registration=TRUE)
