--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ exportMethods(clusters)
 exportMethods(coef)
 exportMethods(factor.scores)
 import(Rcpp)
+import(ltm)
 importFrom(loo,loo)
 importFrom(loo,waic)
 useDynLib(bDif, .registration=TRUE)
